# src/app/core/api/index.ts
@@ -18,6 +18,7 @@ export {
   getApiAdminDocumentsByIdReports,
   getApiAdminDocumentsPending,
   getApiAdminPayouts,
+  getApiAdminReports,
   getApiAdminSellerApplications,
   getApiAdminSellers,
   getApiAdminSettings,
@@ -93,6 +94,7 @@ export {
   postApiLibraryByDocumentIdDownload,
   postApiLibraryByDocumentIdReviews,
   postApiMarketplaceDocumentsByIdQna,
+  postApiMarketplaceDocumentsByIdReport,
   postApiMeSellerApplication,
   postApiOrders,
   postApiOrdersByIdCancel,
@@ -130,6 +132,7 @@ export type {
   AdminDocumentListItemResponse,
   AdminDocumentReportResponse,
   AdminDocumentsSort,
+  AdminOpenReportResponse,
   AdminPayoutResponse,
   AdminPendingDocumentResponse,
   AdminPendingDocumentsSearchRequest,
@@ -227,6 +230,9 @@ export type {
   GetApiAdminPayoutsErrors,
   GetApiAdminPayoutsResponse,
   GetApiAdminPayoutsResponses,
+  GetApiAdminReportsData,
+  GetApiAdminReportsResponse,
+  GetApiAdminReportsResponses,
   GetApiAdminSellerApplicationsData,
   GetApiAdminSellerApplicationsResponse,
   GetApiAdminSellerApplicationsResponses,
@@ -404,6 +410,7 @@ export type {
   OrderPaymentHintsResponse,
   OrderResponse,
   PagedResponseOfAdminDocumentListItemResponse,
+  PagedResponseOfAdminOpenReportResponse,
   PagedResponseOfAdminPayoutResponse,
   PagedResponseOfAdminPendingDocumentResponse,
   PagedResponseOfAdminSellerApplicationResponse,
@@ -558,6 +565,11 @@ export type {
   PostApiMarketplaceDocumentsByIdQnaErrors,
   PostApiMarketplaceDocumentsByIdQnaResponse,
   PostApiMarketplaceDocumentsByIdQnaResponses,
+  PostApiMarketplaceDocumentsByIdReportData,
+  PostApiMarketplaceDocumentsByIdReportError,
+  PostApiMarketplaceDocumentsByIdReportErrors,
+  PostApiMarketplaceDocumentsByIdReportResponse,
+  PostApiMarketplaceDocumentsByIdReportResponses,
   PostApiMeSellerApplicationData,
   PostApiMeSellerApplicationError,
   PostApiMeSellerApplicationErrors,
@@ -701,6 +713,7 @@ export type {
   StoreSectionResponse,
   StripePublicConfigResponse,
   SubcategoryResponse,
+  SubmitDocumentReportRequest,
   SubmitDocumentReviewRequest,
   SubmitSellerApplicationRequest,
   SystemStatusResponse,
